review fixes, reverting to original breakpoints
review fixes: removing extra css

Review fixes:
- changing button to link for back-to-top button
- adding .respond-to-retina mixin

review fixes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,13 @@
 
         <div class="footer-pre">
 
-            <button class="btn btn__secondary footer_top-button"> Back to top <span class="cf-icon cf-icon-arrow-up"></span></button>
+            <a class="btn
+                      btn__secondary
+                      footer_top-button
+                      js-return-to-top"
+               href="#">
+                Back to top <span class="cf-icon cf-icon-arrow-up"></span>
+            </a>
 
             <ul class="footer_nav-list">
                 <li class="list_item">
@@ -68,62 +74,69 @@
         </div><!-- END .footer-pre -->
 
 
-            <div class="footer-middle-left footer_nested-col-group">
+        <div class="footer-middle-left">
 
-                <div class="footer_col">
-                    <ul class="footer_list">
-                        <li class="list_item">
-                            <a class="list_link list_link__disabled">
-                                TBD Content
-                            </a>
-                        </li>
-                        <li class="list_item">
-                            <a class="list_link list_link__disabled">
-                                TBD Content
-                            </a>
-                        </li>
-                        <li class="list_item">
-                            <a class="list_link list_link__disabled">
-                                TBD Content
-                            </a>
-                        </li>
-                        <li class="list_item">
-                            <a class="list_link list_link__disabled">
-                                TBD Content
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer_col">
-                    <ul class="footer_list">
-                        <li class="list_item">
-                            <a class="list_link list_link__disabled">
-                                TBD Content
-                            </a>
-                        </li>
-                        <li class="list_item">
-                            <a class="list_link list_link__disabled">
-                                TBD Content
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+            <div class="footer_col">
+                <ul class="footer_list">
+                    <li class="list_item">
+                        <a class="list_link list_link__disabled">
+                            TBD Content
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a class="list_link list_link__disabled">
+                            TBD Content
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a class="list_link list_link__disabled">
+                            TBD Content
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a class="list_link list_link__disabled">
+                            TBD Content
+                        </a>
+                    </li>
+                </ul>
             </div>
+            <div class="footer_col">
+                <ul class="footer_list">
+                    <li class="list_item">
+                        <a class="list_link list_link__disabled">
+                            TBD Content
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a class="list_link list_link__disabled">
+                            TBD Content
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div><!-- END .footer-middle-left -->
 
         <div class="footer-middle-right">
                 <ul class="footer_list">
                     <li class="list_item">
-                        <a class="list_link icon-link icon-link__external-link" href="http://usa.gov/">
+                        <a class="list_link
+                                  icon-link
+                                  icon-link__external-link"
+                           href="http://usa.gov/">
                             USA.gov
                         </a>
                     </li>
                     <li class="list_item">
-                        <a class="list_link icon-link icon-link__external-link" href="http://www.federalreserve.gov/oig/default.htm">
+                        <a class="list_link
+                                  icon-link
+                                  icon-link__external-link"
+                           href="http://www.federalreserve.gov/oig/default.htm">
                             Office of Inspector General
                         </a>
                     </li>
                 <ul>
-        </div>
+        </div><!-- END .footer-middle-right -->
+
         <div class="footer-post">
             <p class="footer_official-website">
                 An official website of the United States Government
