--- a/static/css/footer.less
+++ b/static/css/footer.less
@@ -24,10 +24,10 @@
     background: @gray-5;
 
     &_share-icon-list {
-        margin-top: unit(30px / @base-font-size-px, em);
+        margin-top: unit(@grid_gutter-width / @base-font-size-px, em);
         .list__horizontal();
 
-        .respond-to-min(860px, {
+        .respond-to-min(768px, {
             margin-top: 0;
             position: absolute;
             // Aligns with the baseline of .footer_nav-list text.
@@ -39,19 +39,20 @@
     &_nav-list {
         .list__links();
 
-        .respond-to-max(859px, {
-            border-top-color: @black;
-        });
-
         .list_link {
             font-size: unit(18px / @base-font-size-px, em);
             .u-link__colors(@black);
 
-            .respond-to-min(860px, {
-                margin-right: unit(30px / 22px, em);
-                font-size: unit(22px / @base-font-size-px, em);
+            .respond-to-min(768px, {
+                margin-right: 1em;
+
                 .webfont-regular();
                 .u-link__hover-border();
+            });
+
+            .respond-to-min(1200px, {
+                margin-right: unit(@grid_gutter-width / 22px, em);
+                font-size: unit(22px / @base-font-size-px, em);
             });
         }
 
@@ -69,6 +70,7 @@
 
         .list_link {
             .u-link__colors(@darkgray);
+            border-bottom: 1px dotted;
         }
 
         .list_link.list_link__disabled {
@@ -123,6 +125,9 @@
             display: block;
             width: 90%;
             max-width: 350px;
+            // There's a standard margin between the top
+            // of the footer and the links. The button comes between
+            // that margin in the wireframes.
             margin: -2em auto 2em;
 
             .cf-icon-arrow-up {
@@ -134,9 +139,9 @@
             margin-bottom: 0;
         }
 
-        .respond-to-min(860px, {
-            padding-bottom: unit(30px / @base-font-size-px, em);
-            margin-bottom: unit(30px / @base-font-size-px, em);
+        .respond-to-min(768px, {
+            padding-bottom: unit(@grid_gutter-width / @base-font-size-px, em);
+            margin-bottom: unit(@grid_gutter-width / @base-font-size-px, em);
             border-bottom: 1px solid @gray-50;
 
             .footer_top-button {
@@ -159,7 +164,7 @@
             margin: 0;
         }
 
-        .respond-to-range(860px, 1199px,{
+        .respond-to-range(768px, 1199px,{
             .grid_column(8);
             border-right: 1px solid @gray-50;
 
@@ -170,8 +175,8 @@
 
         .respond-to-min(1200px, {
             .list__horizontal();
-            padding-bottom: unit(30px / @base-font-size-px, em);
-            margin-bottom: unit(30px / @base-font-size-px, em);
+            padding-bottom: unit(@grid_gutter-width / @base-font-size-px, em);
+            margin-bottom: unit(@grid_gutter-width / @base-font-size-px, em);
             border-bottom: 1px solid @gray-50;
 
             .footer_col, .footer_list {
@@ -185,7 +190,7 @@
     }
 
     &-middle-right {
-        .respond-to-range(860px, 1199px,{
+        .respond-to-range(768px, 1199px,{
             .grid_column(4);
 
             .footer_list {
@@ -206,9 +211,9 @@
     }
 
     &-post {
-        .respond-to-range(860px, 1199px, {
-            padding-top: unit(30px / @base-font-size-px, em);
-            margin-top: unit(30px / @base-font-size-px, em);
+        .respond-to-range(768px, 1199px, {
+            padding-top: unit(@grid_gutter-width / @base-font-size-px, em);
+            margin-top: unit(@grid_gutter-width / @base-font-size-px, em);
             border-top: 1px solid @gray-50;
 
         });
@@ -219,17 +224,19 @@
 
         .footer_official-website {
             .short-desc();
-            padding-left: 37px;
+            padding-left: 37px; //22px flag + 15px spacing
             background: url('../img/us-flag_22x13.png') no-repeat 0 4px;
 
+            // This media query is to keep 'United States Government'
+            // on one line.
             .respond-to-max(479px, {
                 max-width: 220px;
             });
 
-            @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+            .respond-to-retina({
                 background-image: url('../img/us-flag_44x26.png');
                 background-size: 22px;
-            }
+            });
         }
     }
 
