--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 
         <div class="footer-pre">
 
-            <button class="btn btn__secondary footer_top-button"> Back to top <span class="cf-icon cf-icon-arrow-up"></span></button>
+            <button class="btn btn__secondary footer_top-button js-return-to-top"> Back to top <span class="cf-icon cf-icon-arrow-up"></span></button>
 
             <ul class="footer_nav-list">
                 <li class="list_item">
@@ -68,47 +68,47 @@
         </div><!-- END .footer-pre -->
 
 
-            <div class="footer-middle-left">
+        <div class="footer-middle-left">
 
-                <div class="footer_col">
-                    <ul class="footer_list">
-                        <li class="list_item">
-                            <a class="list_link list_link__disabled">
-                                TBD Content
-                            </a>
-                        </li>
-                        <li class="list_item">
-                            <a class="list_link list_link__disabled">
-                                TBD Content
-                            </a>
-                        </li>
-                        <li class="list_item">
-                            <a class="list_link list_link__disabled">
-                                TBD Content
-                            </a>
-                        </li>
-                        <li class="list_item">
-                            <a class="list_link list_link__disabled">
-                                TBD Content
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer_col">
-                    <ul class="footer_list">
-                        <li class="list_item">
-                            <a class="list_link list_link__disabled">
-                                TBD Content
-                            </a>
-                        </li>
-                        <li class="list_item">
-                            <a class="list_link list_link__disabled">
-                                TBD Content
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+            <div class="footer_col">
+                <ul class="footer_list">
+                    <li class="list_item">
+                        <a class="list_link list_link__disabled">
+                            TBD Content
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a class="list_link list_link__disabled">
+                            TBD Content
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a class="list_link list_link__disabled">
+                            TBD Content
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a class="list_link list_link__disabled">
+                            TBD Content
+                        </a>
+                    </li>
+                </ul>
             </div>
+            <div class="footer_col">
+                <ul class="footer_list">
+                    <li class="list_item">
+                        <a class="list_link list_link__disabled">
+                            TBD Content
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a class="list_link list_link__disabled">
+                            TBD Content
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div><!-- END .footer-middle-left -->
 
         <div class="footer-middle-right">
                 <ul class="footer_list">
@@ -123,7 +123,8 @@
                         </a>
                     </li>
                 <ul>
-        </div>
+        </div><!-- END .footer-middle-right -->
+
         <div class="footer-post">
             <p class="footer_official-website">
                 An official website of the United States Government
