Review fixes: - changing button to link for back-to-top button - adding .respond-to-retina mixin

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 
         <div class="footer-pre">
 
-            <button class="btn btn__secondary footer_top-button js-return-to-top"> Back to top <span class="cf-icon cf-icon-arrow-up"></span></button>
+            <a class="btn btn__secondary footer_top-button js-return-to-top" href="#"> Back to top <span class="cf-icon cf-icon-arrow-up"></span></a>
 
             <ul class="footer_nav-list">
                 <li class="list_item">
