--- a/static/css/footer.less
+++ b/static/css/footer.less
@@ -228,10 +228,10 @@
                 max-width: 220px;
             });
 
-            @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+            .respond-to-retina({
                 background-image: url('../img/us-flag_44x26.png');
                 background-size: 22px;
-            }
+            });
         }
     }
 
