--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -40,3 +40,7 @@
         </aside>
     </div>
 {% endblock %}
+
+{% block javascript %}
+<script src="{{ url_for('static', filename='js/routes/common.js') }}"></script>
+{% endblock javascript %}
