--- a/static/css/beta.less
+++ b/static/css/beta.less
@@ -75,8 +75,8 @@
     });
 
     .respond-to-min(801px, {
-        // At this width, the wrapper gains position: relative, so the button
-        // position has to be adjusted accordingly.
+        // At this width, the wrapper gains `position: relative`,
+        // so the button position has to be adjusted accordingly.
         top: -12px;
     });
 }
