--- a/_layouts/500.html
+++ b/_layouts/500.html
@@ -41,3 +41,8 @@
         </aside>
     </div>
 {% endblock %}
+
+{% block javascript %}
+<script src="{{ url_for('static', filename='js/routes/common.js') }}"></script>
+{% endblock javascript %}
+
