Removes demo text in title

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -43,7 +43,7 @@
     ==================
 -->
 
-    <title>{% block title %}MISSING TITLE{% endblock title %} - cfgov-refresh demo</title>
+    <title>{% block title %}MISSING TITLE{% endblock title %}</title>
     <meta name="description"
           content="{% block desc %}Prototyping for the consumerfinance.gov refresh{% endblock %}">
 
