--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,13 @@
 
         <div class="footer-pre">
 
-            <a class="btn btn__secondary footer_top-button js-return-to-top" href="#"> Back to top <span class="cf-icon cf-icon-arrow-up"></span></a>
+            <a class="btn
+                      btn__secondary
+                      footer_top-button
+                      js-return-to-top"
+               href="#">
+                Back to top <span class="cf-icon cf-icon-arrow-up"></span>
+            </a>
 
             <ul class="footer_nav-list">
                 <li class="list_item">
@@ -113,12 +119,18 @@
         <div class="footer-middle-right">
                 <ul class="footer_list">
                     <li class="list_item">
-                        <a class="list_link icon-link icon-link__external-link" href="http://usa.gov/">
+                        <a class="list_link
+                                  icon-link
+                                  icon-link__external-link"
+                           href="http://usa.gov/">
                             USA.gov
                         </a>
                     </li>
                     <li class="list_item">
-                        <a class="list_link icon-link icon-link__external-link" href="http://www.federalreserve.gov/oig/default.htm">
+                        <a class="list_link
+                                  icon-link
+                                  icon-link__external-link"
+                           href="http://www.federalreserve.gov/oig/default.htm">
                             Office of Inspector General
                         </a>
                     </li>
