--- a/static/css/footer.less
+++ b/static/css/footer.less
@@ -24,7 +24,7 @@
     background: @gray-5;
 
     &_share-icon-list {
-        margin-top: unit(30px / @base-font-size-px, em);
+        margin-top: unit(@grid_gutter-width / @base-font-size-px, em);
         .list__horizontal();
 
         .respond-to-min(768px, {
@@ -44,14 +44,14 @@
             .u-link__colors(@black);
 
             .respond-to-min(768px, {
-                margin-right: unit(18px / @base-font-size-px, em);
+                margin-right: 1em;
 
                 .webfont-regular();
                 .u-link__hover-border();
             });
 
             .respond-to-min(1200px, {
-                margin-right: unit(30px / 22px, em);
+                margin-right: unit(@grid_gutter-width / 22px, em);
                 font-size: unit(22px / @base-font-size-px, em);
             });
         }
@@ -125,6 +125,9 @@
             display: block;
             width: 90%;
             max-width: 350px;
+            // There's a standard margin between the top
+            // of the footer and the links. The button comes between
+            // that margin in the wireframes.
             margin: -2em auto 2em;
 
             .cf-icon-arrow-up {
@@ -137,8 +140,8 @@
         }
 
         .respond-to-min(768px, {
-            padding-bottom: unit(30px / @base-font-size-px, em);
-            margin-bottom: unit(30px / @base-font-size-px, em);
+            padding-bottom: unit(@grid_gutter-width / @base-font-size-px, em);
+            margin-bottom: unit(@grid_gutter-width / @base-font-size-px, em);
             border-bottom: 1px solid @gray-50;
 
             .footer_top-button {
@@ -172,8 +175,8 @@
 
         .respond-to-min(1200px, {
             .list__horizontal();
-            padding-bottom: unit(30px / @base-font-size-px, em);
-            margin-bottom: unit(30px / @base-font-size-px, em);
+            padding-bottom: unit(@grid_gutter-width / @base-font-size-px, em);
+            margin-bottom: unit(@grid_gutter-width / @base-font-size-px, em);
             border-bottom: 1px solid @gray-50;
 
             .footer_col, .footer_list {
@@ -209,8 +212,8 @@
 
     &-post {
         .respond-to-range(768px, 1199px, {
-            padding-top: unit(30px / @base-font-size-px, em);
-            margin-top: unit(30px / @base-font-size-px, em);
+            padding-top: unit(@grid_gutter-width / @base-font-size-px, em);
+            margin-top: unit(@grid_gutter-width / @base-font-size-px, em);
             border-top: 1px solid @gray-50;
 
         });
@@ -221,9 +224,11 @@
 
         .footer_official-website {
             .short-desc();
-            padding-left: 37px;
+            padding-left: 37px; //22px flag + 15px spacing
             background: url('../img/us-flag_22x13.png') no-repeat 0 4px;
 
+            // This media query is to keep 'United States Government'
+            // on one line.
             .respond-to-max(479px, {
                 max-width: 220px;
             });
