--- a/_includes/post-macros.html
+++ b/_includes/post-macros.html
@@ -239,7 +239,7 @@
             Older
             <span class="btn_icon__right cf-icon cf-icon-right"></span>
         </a>
-        <form class="pagination_form" action="#pagination_content">
+        <form class="pagination_form js-validate_pagination" action="#pagination_content">
             <label class="pagination_label" for="pagination_current-page">
                 Page
                 <span class="u-visually-hidden">
@@ -250,6 +250,8 @@
                    id="pagination_current-page"
                    name="page"
                    type="number"
+                   inputmode="numeric"
+                   pattern="[0-9]*"
                    min="1"
                    max="{{ query_obj.pages }}"
                    value="{{ query_obj.current_page }}">
