Hotfix: disable factor-bundle
- Factor-bundle was having issues of not fully writing page-specific
bundles. This commit removes factor-bundle till the issues can be
worked out.
- Also removes unused `concat:bodyScripts` task and replaces with
browserify.
- Changes ESLint to correct order in package.son.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -189,18 +189,10 @@
     BODY SCRIPTS
     ============
     The number of scripts here must be kept to a minimum.
-    app.js = Application-wide JavaScript.
-    {active_page}.js = Page-specific Javascript.
+    common.min.js = Application-wide JavaScript.
 -->
 {% block javascript %}
-<script src="{{ url_for('static', filename='js/routes/common.js') }}"></script>
-{% set js_route = request.path[1:] + 'index.js' %}
-<script id="page-javascript" type="application/json">
-{
-    "page": "{{js_route}}",
-    "routes": {% include('static/js/routes-manifest.json')%}
-}
-</script>
+<script src="{{ url_for('static', filename='js/routes/common.min.js') }}"></script>
 {% endblock javascript %}
 
 </body>
