Adding categories for icons

--- a/_includes/post-macros.html
+++ b/_includes/post-macros.html
@@ -21,6 +21,14 @@
     <span class="{{ additional_classes }} cf-icon cf-icon-bullhorn"></span>
     {%- elif category|lower == 'consumer information' -%}
     <span class="{{ additional_classes }} cf-icon cf-icon-information"></span>
+    {%- elif category|lower == 'info for consumers' -%}
+    <span class="{{ additional_classes }} cf-icon cf-icon-information"></span>
+    {%- elif category|lower == 'at the cfpb' -%}
+    <span class="{{ additional_classes }} cf-icon cf-icon-bullhorn"></span>
+    {%- elif category|lower == 'data, research & reports' -%}
+    <span class="{{ additional_classes }} cf-icon cf-icon-chart"></span>
+    {%- elif category|lower == 'policy & compliance' -%}
+    <span class="{{ additional_classes }} cf-icon cf-icon-bank-account"></span>
     {%- elif category|lower == 'engagement' -%}
     <span class="{{ additional_classes }} cf-icon cf-icon-dialogue"></span>
     {%- elif category|lower == 'innovation & data' -%}
