Hotfix: corrects JS paths for 400 and 500 error pages
400 and 500 error pages had unminified JS path for common.js. This
commit changes it to the minified version in use.

--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -42,5 +42,5 @@
 {% endblock %}
 
 {% block javascript %}
-<script src="{{ url_for('static', filename='js/routes/common.js') }}"></script>
+<script src="{{ url_for('static', filename='js/routes/common.min.js') }}"></script>
 {% endblock javascript %}
