--- a/_layouts/500.html
+++ b/_layouts/500.html
@@ -43,6 +43,6 @@
 {% endblock %}
 
 {% block javascript %}
-<script src="{{ url_for('static', filename='js/routes/common.js') }}"></script>
+<script src="{{ url_for('static', filename='js/routes/common.min.js') }}"></script>
 {% endblock javascript %}
 
