Created two new CF jQuery plugins to support validating forms and displaying a message when that validation fails.
cf_formValidator:

- utilizes validate library to handle validation logic.
- tests for passed input types
- returns an object containing the valid and invalid fields
- includes onFailure and onSuccess callbacks for firing events
  after validation (like cf_notifier)
- still need to work out testing forms that require at least one
  input and adding custom tests

cf_notifier:

- uses handlebars as templating engine
- creates a custom notification when passed state and message options
  during a custom event
- adds cf-notifications stylesheet to be ported to CF in the future

form-validation:

- ties cf_formValidation and cf_notifier together
- adds error state to failed input

General

- updated cf-enhancements to include warning states for notifications
  and form input highlights

--- a/_includes/post-macros.html
+++ b/_includes/post-macros.html
@@ -536,7 +536,6 @@
 {# A helper macro for filters()
    ========================================================================== #}
 {% macro filters_form(filters, query, doc_type, options) %}
-{% from 'macros.html' import alert  %}
 
 <form class="js-validate-filters {{ options.additional_classes }}"
       method="get"
@@ -545,7 +544,6 @@
 {%- else -%}
       >
 {% endif %}
-    {{ alert(options.alert) if options.alert }}
     <div class="form-l form-l__float form-l__flush">
 {% for filter in filters %}
 
@@ -591,7 +589,7 @@
     {# Calendar filters #}
     {% elif filter == 'calendar' %}
         <div class="form-l_col form-l_col-1-3">
-            <div class="form-group">
+            <div class="form-group required-check-group">
                 <label class="form-label-header">
                     Calendars
                 </label>
