--- a/static/css/cf-theme-overrides.less
+++ b/static/css/cf-theme-overrides.less
@@ -121,6 +121,9 @@
 // .error
 @input-error:                   @redorange;
 
+// .warning
+@input-warning:                 @gold;
+
 // .success
 @input-success:                 @green;
 
