--- a/static/css/main.less
+++ b/static/css/main.less
@@ -94,6 +94,9 @@
 // Enhancements that are on a migration path to being added to CF.
 @import (less) "cf-enhancements.less";
 
+// Crazy awesome notifications!
+@import (less) "cf-notifications.less";
+
 
 /* Base patterns
    ========================================================================== */
