--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -5104,6 +5104,82 @@ tbody tr {
   border: 1px solid #babbbd;
 }
 
+input[type="text"].warning,
+input[type="search"].warning,
+input[type="email"].warning,
+input[type="url"].warning,
+input[type="tel"].warning,
+input[type="number"].warning,
+select[multiple].warning,
+textarea.warning {
+  border: 1px solid #ff9e1b;
+  outline: 1px solid #ff9e1b;
+}
+
+.warning+.cf-form_input-icon {
+  color: #ff9e1b;
+}
+
+.cf-notification {
+  display: none;
+  position: relative;
+  padding: 11px;
+  padding-left: 40px;
+  margin-bottom: 15px;
+  background: #e3e4e5;
+  border: 1px solid #75787b;
+}
+
+.cf-notification__error {
+  background: #f6d9d3;
+  border-color: #d12124;
+}
+
+.cf-notification__success {
+  background: #dbedd4;
+  border-color: #2cb34a;
+}
+
+.cf-notification__warning {
+  background: #ffecd1;
+  border-color: #ff9e1b;
+}
+
+.cf-notification_icon {
+  position: absolute;
+  top: 13px;
+  left: 15px;
+  color: #e3e4e5;
+  font-size: 1.125em;
+}
+
+.cf-notification_icon__error {
+  color: #d14327;
+}
+
+.cf-notification_icon__success {
+  color: #2cb34a;
+}
+
+.cf-notification_icon__warning {
+  color: #ff931b;
+}
+
+.cf-notification_text {
+  margin-top: 0;
+  margin-bottom: 1.16666667em;
+  font-size: 1.125em;
+  font-family: "AvenirNextLTW01-Medium",Arial,sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.22222222;
+  margin: 0;
+}
+
+.lt-ie9 .cf-notification_text {
+  font-weight: normal !important;
+}
+
 .is-enabled.custom-select {
   overflow: hidden;
   position: relative;
@@ -6806,50 +6882,6 @@ a.hero_card {
 
 .lt-ie9 .step-slug {
   font-weight: normal !important;
-}
-
-.alert {
-  background: #f6d9d3;
-  border: 1px solid #d12124;
-  display: none;
-  margin-bottom: 15px;
-  padding: 15px;
-}
-
-.alert_icon {
-  background-color: #fff;
-  border-radius: 100%;
-  color: #D14327;
-  float: left;
-  font-size: 1.875em;
-  position: relative;
-  top: -2px;
-}
-
-.alert_text {
-  margin-top: 0;
-  margin-bottom: 1.16666667em;
-  font-size: 1.125em;
-  font-family: "AvenirNextLTW01-Medium",Arial,sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 1.22222222;
-  margin: 0;
-  overflow: auto;
-  padding-left: 15px;
-}
-
-.lt-ie9 .alert_text {
-  font-weight: normal !important;
-}
-
-.lt-ie9 .alert {
-  background: #f6d9d3 url('/static/img/warning-icon.png') no-repeat 15px 15px;
-  padding-left: 2.8125em;
-}
-
-.lt-ie9 .alert_icon {
-  display: none;
 }
 
 .summary {
