--- a/static/css/footer.less
+++ b/static/css/footer.less
@@ -233,7 +233,7 @@
                 max-width: 220px;
             });
 
-            .respond-to-retina({
+            .respond-to-dpi({
                 background-image: url('../img/us-flag_44x26.png');
                 background-size: 22px;
             });
