--- a/static/css/bureau-structure.less
+++ b/static/css/bureau-structure.less
@@ -31,7 +31,7 @@
        pseudo elements applied to .org-chart_branches & .org-chart_branch.
      */
     &_branches {
-        padding-top: unit(@grid_gutter-width, px);
+        padding-top: @grid_gutter-width;
 
         /* :before pseudo element's left border draws a centered vertical line
            down from .org-chart_root to .org-chart_branches.*/
@@ -45,7 +45,7 @@
                 left: 50%;
                 border-left: 1px solid @gray-50;
                 width: 0;
-                height: unit(@grid_gutter-width, px);
+                height: @grid_gutter-width;
             }
         });
     }
@@ -65,14 +65,14 @@
                 position: absolute;
                 top: 0;
                 width: 50%;
-                height: unit(@grid_gutter-width, px);
+                height: @grid_gutter-width;
                 border-color: @gray-50;
                 border-style: solid;
                 border-width: 0;
             }
 
             &:first-child {
-                padding-right: unit(@grid_gutter-width / 2, px);
+                padding-right: @grid_gutter-width / 2;
 
                 &:after {
                     left: 50%;
@@ -81,7 +81,7 @@
             }
 
             &.last-child {
-                padding-left: unit(@grid_gutter-width / 2, px);
+                padding-left: @grid_gutter-width / 2;
 
                 &:before{
                     right: 50%;
@@ -101,8 +101,8 @@
     }
 
     &_role {
-        padding: unit(@grid_gutter-width / 2, px);
-        padding-right: unit(@grid_gutter-width, px);
+        padding: @grid_gutter-width / 2;
+        padding-right: @grid_gutter-width;
         position: relative;
         background: @gray-10;
         border-color: @gray-20;
@@ -119,7 +119,7 @@
 
         .respond-to-min(600px, {
             position: relative;
-            margin-bottom: unit(@grid_gutter-width / 2, px);
+            margin-bottom: @grid_gutter-width / 2;
         });
 
         .respond-to-max(599px, {
