--- a/static/css/cf-enhancements.less
+++ b/static/css/cf-enhancements.less
@@ -116,7 +116,7 @@
 }
 
 /* topdoc
-  name: respond-to-dpi() (mixin)
+  name: respond-to-dpi(@ratio) (mixin)
   notes:
     - "This mixin allows us to easily write styles
     that target high-resolution screens,
@@ -130,7 +130,7 @@
           .example {
               background: url(regular-resolution-image.png);
 
-              .respond-to-dpi({
+              .respond-to-dpi(2, {
                   background-image: url(retina-image.png);
               });
           }
@@ -148,8 +148,9 @@
     - cfgov-cf-enhancements
 */
 
-.respond-to-dpi(@rules) {
-    @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+.respond-to-dpi(@ratio, @rules) {
+    @dpi: (@ratio * 96dpi);
+    @media (-webkit-min-device-pixel-ratio: @ratio), (min-resolution: @dpi) {
         @rules();
     }
 }
