Adding Hero About-Us video

--- a/static/css/bureau.less
+++ b/static/css/bureau.less
@@ -102,6 +102,7 @@
         });
     }
 }
+
 .slick-slider {
     margin-top: 45px;
 
@@ -170,5 +171,185 @@
             .cf-icon();
         }
     }
+}
 
+// Used to help center video container
+@share-width__px: 150px;
+@gutter__em: unit(@grid_gutter-width  / @base-font-size-px, em);
+@gutter-half__em: @gutter__em / 2;
+
+.hero__bureau {
+    padding-top: 0;
+
+    .hero_wrapper {
+
+        .respond-to-min(661px, {
+            padding-top: @gutter__em * 2;
+        });
+    }
+}
+
+.hero_card__bureau {
+    .hero_preview {
+        padding-bottom: @gutter__em * 2;
+    }
+
+    .jump-link {
+        display: block;
+        margin: @gutter-half__em 0;
+    };
+}
+
+#youtube-player {
+    float: left;
+
+    .respond-to-min(1024px, {
+        padding-left: @share-width__px;
+    });
+
+    .respond-to-max(825px, {
+        .u-flexible-container_inner();
+    });
+}
+
+.youtube-player_container {
+    overflow: hidden;
+}
+
+.youtube-player_container.yt-playing {
+    background-color: #000;
+
+    .hide-on_yt-playing {
+        display: none;
+    }
+
+    .show-on_yt-playing {
+        display: block;
+    }
+
+    .youtube-player_video-container {
+        display: table;
+
+        .respond-to-max(825px, {
+            display: block;
+        })
+    }
+
+    .respond-to-max(660px, {
+        margin-top: 0;
+    });
+}
+
+.youtube-player_iframe-container {
+    float: left;
+
+    .respond-to-max(825px, {
+        .u-flexible-container();
+        width: 100%;
+    });
+}
+
+.youtube-player_image {
+    left: 0;
+    position: absolute;
+    top: 0;
+
+    &__center {
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 10;
+    }
+}
+
+.youtube-player_image-container {
+
+    .respond-to-max(660px, {
+        .u-flexible-container();
+    });
+}
+
+// Size of play button image;
+@play-btn-size__px: 73px;
+
+.youtube-player_play-btn {
+    background: url('/static/img/youtube-play-btn.png') no-repeat;
+    height: @play-btn-size__px;
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: @play-btn-size__px;
+    z-index: 10;
+}
+
+.lt-ie9 {
+    .youtube-player_play-btn {
+        margin-left: -1 * @play-btn-size__px;
+    }
+}
+
+.youtube-player_actions-container {
+    color: @white;
+    float: left;
+
+    h1 {
+        margin: @gutter__em 0 @gutter-half__em 0;
+    }
+
+    .respond-to-max(825px, {
+        .grid_wrapper();
+        margin: @gutter-half__em 0;
+        padding: 0;
+        width: 100%;
+    });
+
+    .respond-to-min(826px {
+        margin: @gutter__em 0 0 @gutter__em;
+        width: @share-width__px;
+    });
+}
+
+.youtube-player_share-actions {
+    .h5, .post_share {
+        .respond-to-max(825px, {
+            display: inline-block;
+            margin: 0 0 0 @gutter-half__em;
+            vertical-align: text-top;
+        });
+    }
+
+    // Adding white background to the share icons
+    // without overlap.
+    .cf-icon {
+        background: @white;
+        height: 20px;
+        width: 22px;
+
+        &:before {
+            position: relative;
+            top: -3px;
+        }
+    }
+
+    .share-icon {
+        color: @pacific;
+    }
+
+    .respond-to-max(825px, {
+        .grid_column(3, 5);
+        text-align: right;
+    });
+}
+
+.youtube-player_video-container {
+    display: none;
+    margin: auto;
+}
+
+.youtube-player_video-actions {
+
+    .respond-to-max(825px, {
+        .grid_column(2, 5)
+    });
 }
