--- a/_includes/macros.html
+++ b/_includes/macros.html
@@ -237,12 +237,12 @@
       enctype="application/x-www-form-urlencoded">
 
     <div class="form-group">
-        <label for="email-subscribe-form_email-1">
+        <label for="email-subscribe-form_email">
             Email address
         </label>
-        <input id="email-subscribe-form_email-1"
+        <input id="email-subscribe-form_email"
                type="email"
-               name="email1"
+               name="email"
                placeholder="example@mail.com"
                required>
     </div>
