Cleans up grunt file tasks
- Moves vendor directory to /src/vendor and updates grunt vendor task.
- Removes vendor artifacts that were checked into the repo.
- Adds `grunt watch:js` task.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -89,13 +89,13 @@
 -->
 
 <!--[if lt IE 9]>
-    <script src="/static/vendor/html5shiv/html5shiv-printshiv.min.js"></script>
+    <script src="/static/js/html5shiv-printshiv.min.js"></script>
 <![endif]-->
 
     <script>
-        // Confirm availability of JS and remove no-js class from html
+        // Confirm availability of JS and remove no-js class from html.
         var docElement = document.documentElement;
-        docElement.className = docElement.className.replace(/(^|\s)no-js(\s|$)/, '$1$2');
+        docElement.className = docElement.className.replace( /(^|\s)no-js(\s|$)/, '$1$2' );
     </script>
 
 </head>
