--- a/static/css/cf-theme-overrides.less
+++ b/static/css/cf-theme-overrides.less
@@ -136,7 +136,7 @@
 /* cf-grid
    ========================================================================== */
 
-@grid_box-sizing-polyfill-path: '/static/vendor/box-sizing-polyfill';
+@grid_box-sizing-polyfill-path: '@{loc-dist}/static/js';
 @grid_wrapper-width:            1200px;
 @grid_gutter-width:             30px;
 @grid_total-columns:            12;
