Updated key names in contact info condition

--- a/_includes/contact-macro.html
+++ b/_includes/contact-macro.html
@@ -15,7 +15,7 @@
     {%- endif %}
     </div>
     <div class="content-l_col content-l_col-1-2">
-    {%- if contact.email_addr or contact.phone_num or contact.fax_num or contact.street %}
+    {%- if contact.email_0_addr or contact.phone_0_num or contact.fax_num or contact.street %}
         <ul class="list list__icons">
         {%- if contact.email_0_addr %}
             <li class="list_item u-break-word">
