--- a/static/css/main.less
+++ b/static/css/main.less
@@ -4,78 +4,15 @@
    ========================================================================== */
 
 
-// @import Normalize before all other Less/CSS
+// @import Normalize before all other Less/CSS.
 @import (less) "../../vendor/normalize-css/normalize.css";
 @import (less) "../../vendor/normalize-legacy-addon/normalize-legacy-addon.css";
 
-// @import third party plugins
+// @import third party plugins.
 @import (less) "../../vendor/chosen/chosen.css";
 
-// Chosen overrides
-.chosen-container {
-    font-size: 1em;
-
-    a {
-        border-bottom: none !important;
-    }
-
-    &,
-    * {
-        box-shadow: none !important;
-        font-family: Arial, sans-serif;
-    }
-
-    &.chosen-container-multi .chosen-choices li.search-field input[type=text] {
-        width: 90% !important;
-        height: auto;
-        margin: 0;
-        padding: unit(6px / @base-font-size-px, em);
-        color: @gray;
-    }
-
-    &.chosen-container .chosen-drop {
-        margin-top: 1px;
-        border-color: @pacific;
-        outline: 1px solid @pacific;
-    }
-
-    &.chosen-container-multi .chosen-choices {
-        border-color: @gray-80;
-        background-color: @white;
-        background-image: none !important;
-    }
-
-    &.chosen-container-multi.chosen-container-active .chosen-choices {
-        border-color: @pacific;
-        outline: 1px solid @pacific;
-    }
-
-    &.chosen-container-multi .chosen-choices li.search-choice {
-        margin-left: 3px;
-        border-color: @gray-80;
-        background-color: @gray-10;
-        background-image: none !important;
-        font-size: unit(13px / @base-font-size-px, em);
-        line-height: unit(12 / 13);
-    }
-
-    &.chosen-container-multi .chosen-drop .result-selected {
-        color: @gray;
-    }
-
-    .highlighted {
-        background-color: @pacific;
-        background-image: none !important;
-    }
-
-    &.chosen-container-multi .chosen-choices li.search-choice .search-choice-close {
-        top: 3px;
-    }
-
-    .chosen-results li {
-        line-height: 1.2;
-    }
-}
+// @import third party plugin overrides.
+@import (less) "chosen-overrides.less";
 
 
 /* Base styles
