--- a/static/css/bureau.less
+++ b/static/css/bureau.less
@@ -183,11 +183,24 @@
 
 .hero__bureau {
     padding-top: 0;
+    border-top: 1px solid @gray-50;
 
     .hero_wrapper {
 
-        .respond-to-min(661px, {
+        .respond-to-min(660px, {
             padding-top: @gutter__em * 2;
+        });
+    }
+
+    .youtube-player_image {
+        width: @grid_wrapper-width;
+
+        // Optical adjustment for beautification purposes.
+        top: -1 * @gutter__em;
+
+        .respond-to-max(825px, {
+            // Adjustment for YouTube image height/weight ratio.
+            top: 1px;
         });
     }
 }
@@ -216,6 +229,7 @@
 }
 
 .youtube-player_container {
+    background: @white;
     overflow: hidden;
 }
 
@@ -238,7 +252,7 @@
         });
     }
 
-    .respond-to-max(660px, {
+    .respond-to-max(659px, {
         margin-top: 0;
     });
 }
@@ -253,34 +267,30 @@
 }
 
 .youtube-player_image {
-    left: 0;
+    margin: 0 auto;
     position: absolute;
     top: 0;
-
-    &__center {
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 10;
-    }
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 .youtube-player_image-container {
 
-    .respond-to-max(660px, {
+    .respond-to-max(659px, {
         .u-flexible-container();
     });
 }
 
 .youtube-player_play-btn {
-    background: url('/static/img/youtube-play-btn.png') no-repeat;
     height: @play-btn-size__px;
-    left: 50%;
-    position: absolute;
-    top: 50%;
-    transform: translate(-50%, -50%);
     width: @play-btn-size__px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    background: url('/static/img/youtube-play-btn.png') no-repeat;
     z-index: 10;
+    transform: translate(-50%, -50%);
 }
 
 .lt-ie9 {
@@ -290,8 +300,8 @@
 }
 
 .youtube-player_actions-container {
-    color: @white;
     float: left;
+    color: @white;
 
     h1 {
         margin: @gutter__em 0 @gutter-half__em 0;
