Adding pagination validation

--- a/_includes/post-macros.html
+++ b/_includes/post-macros.html
@@ -239,7 +239,7 @@
             Older
             <span class="btn_icon__right cf-icon cf-icon-right"></span>
         </a>
-        <form class="pagination_form" action="#pagination_content">
+        <form class="pagination_form js-validate_pagination" action="#pagination_content">
             <label class="pagination_label" for="pagination_current-page">
                 Page
                 <span class="u-visually-hidden">
