--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -261,6 +261,14 @@
     margin: unit(54px / @base-font-size-px, em) 0 unit(28px / @base-font-size-px, em);
 }
 
+.cf-notification__pagination-ctr {
+    margin-top:  unit(30px / @base-font-size-px, em);
+
+    .cf-notification {
+        margin-bottom:  0;
+    }
+}
+
 .press-information {
     margin-top: unit(60px / @base-font-size-px, em);
     .respond-to-min(600px, {
