--- a/static/css/forms.less
+++ b/static/css/forms.less
@@ -3,6 +3,16 @@
    forms
    ========================================================================== */
 
+/*
+  Adding more labels
+*/
+
+
+/*
+  Radio Button Styling
+*/
+.u-b0 {border: 0 !important}
+
 /* topdoc
     name: Custom select menus via jquery.custom-input
     family: cfgov-forms
